GH-38501: [Java] Change Java minimum version to 11
Channge minimum Java version to build Arrow to 11:
* Change minimum java version and source/target/release compiler
  properties to 11
* Remove maven modules
* Remove jdk11+ profiles and integrate their content into the main
  section
* Let maven-compiler-plugin process `module-info.java` files and address
  several declaration issues
* Exclude non modularized modules from javadoc aggregate tasks
* Exclude module-info.class files from shaded jars as it is not
  representative of the whole content and may actually directly coming
  from a 3rd party dependency.